REGRESSION (Safari 17): getRangeAt(0) returns the same JS object even after selection changes, differs from Chrome and Firefox https://bugs.webkit.org/show_bug.cgi?id=273469 <rdar://problem/127314280>

Reviewed by Wenson Hsieh.

This PR makes WebKit's behavior match Gecko's and Blink's behaviors by dissociating live ranges when updating selection except
when we're updating as a result of DOM mutation or via manipulation of live ranges.

* LayoutTests/editing/selection/update-selection-with-find-dissociates-range-expected.txt: Added.
* LayoutTests/editing/selection/update-selection-with-find-dissociates-range.html: Added.
* LayoutTests/editing/selection/update-selection-with-modify-dissociates-range-expected.txt: Added.
* LayoutTests/editing/selection/update-selection-with-modify-dissociates-range.html: Added.
* Source/WebCore/editing/FrameSelection.cpp:
(WebCore::FrameSelection::setSelectionWithoutUpdatingAppearance):
(WebCore::FrameSelection::respondToNodeModification):
(WebCore::FrameSelection::textWasReplaced):
(WebCore::FrameSelection::updateFromAssociatedLiveRange):
(WebCore::FrameSelection::updateAssociatedLiveRange): Deleted.
* Source/WebCore/editing/FrameSelection.h:

Canonical link: https://commits.webkit.org/285996@main